--- a/python/nodes.yaml
+++ b/python/nodes.yaml
@@ -2,33 +2,25 @@ bootstrap_kvm:
   - name: bootstrap
     ip_os: 192.168.192.149
 control_nodes:
-  - name: 650m3
-    ip_os: 192.168.192.151
-    ip_idrac: 192.167.192.25
-  - name: 650m2
+  - name: control1
+    ip_os: 192.168.192.23
+    ip_idrac: 100.82.34.21
+  - name: control2
     ip_os: 192.168.192.152
-    ip_idrac: 192.167.192.26
-  - name: 650m1
+    ip_idrac: 100.82.34.22
+  - name: control3
     ip_os: 192.168.192.153
-    ip_idrac: 192.167.192.27
+    ip_idrac: 100.82.34.23
 compute_nodes:
-  - name: 650c1
+  - name: compute1
     ip_os: 192.168.192.154
-    ip_idrac: 192.167.192.28
+    ip_idrac: 100.82.34.24
     os: rhcos
-  - name: 650c2
+  - name: compute2
     ip_os: 192.168.192.155
-    ip_idrac: 192.167.192.29
+    ip_idrac: 100.82.34.25
     os: rhel
-  - name: xe2420
+  - name: compute3
     ip_os: 192.168.192.156
-    ip_idrac: 192.167.190.20
-    os: rhcos
-  - name: xr12
-    ip_os: 192.168.192.158
-    ip_idrac: 192.167.190.22
-    os: rhcos
-  - name: xr11
-    ip_os: 192.168.192.157
-    ip_idrac: 192.167.190.23
+    ip_idrac: 100.82.34.27
     os: rhcos
